--- a/Views/Marks/Index.cshtml
+++ b/Views/Marks/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Aplikacja121.Data.Student>
+﻿@model IEnumerable<Aplikacja121.Data.Mark>
 
 @{
     ViewData["Title"] = "Index";
@@ -13,13 +13,13 @@
     <thead>
         <tr>
                 <th>
-                    @Html.DisplayNameFor(model => model.Name)
+                    @Html.DisplayNameFor(model => model.Value)
                 </th>
-                <th>    
-                    @Html.DisplayNameFor(model => model.Surname)
+                <th>
+                    @Html.DisplayNameFor(model => model.Description)
                 </th>
             <th>
-                @Html.DisplayNameFor(model => model.Class)
+                @Html.DisplayNameFor(model => model.Student)
             </th>
             <th></th>
         </tr>
@@ -28,13 +28,13 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Name)
+                @Html.DisplayFor(modelItem => item.Value)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Surname)
+                @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Class.Id)
+                @Html.DisplayFor(modelItem => item.Student.Id)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
